--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello World
+Open Source Contributions:
+2007, pcal Hawaiian L10n, <a href="https://sourceforge.net/projects/pcal/files/pcal/pcal-4.11.0/#readme:~:text=Thanks%20to%20Eric%20Nichols%20for%20this%20patch.">https://sourceforge.net/projects/pcal/files/pcal/pcal-4.11.0/#readme:~:text=Thanks%20to%20Eric%20Nichols%20for%20this%20patch.</a>
+2008, XTide PHP UI, <a href="https://flaterco.com/xtide/files.html#icons:~:text=Hawaiian%20L10n">https://flaterco.com/xtide/files.html#icons:~:text=Hawaiian%20L10n</a>
+2014, CyanogenMod for Mega, </a href="https://forum.xda-developers.com/galaxy-mega/rom-cyanogenmod12-20141203-t2963804"> https://forum.xda-developers.com/galaxy-mega/rom-cyanogenmod12-20141203-t2963804</a>
+2017, live linux boot arguments, </a href="https://github.com/livecd-tools/livecd-tools/pull/55">https://github.com/livecd-tools/livecd-tools/pull/55</a>
+
