--- a/tinymce.html
+++ b/tinymce.html
@@ -7,15 +7,14 @@
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 
     <script>
-      tinymce.init({
-        selector: '#mytextarea'
-      });
-    </script>
+tinymce.init({
+    selector: 'textarea#mytextarea'
+});    </script>
 
   </head>
 
   <body>
-  <h1>TinyMCE Quick Start Guide</h1>
+  <h1>TinyMCE</h1>
     <form method="post">
       <textarea id="mytextarea">Hello, World!</textarea>
     </form>
