--- a/tinymce.html
+++ b/tinymce.html
@@ -8,15 +8,19 @@
 
     <script>
 tinymce.init({
-    selector: 'textarea#mytextarea'
-});    </script>
+  selector: "textarea",  // change this value according to your HTML
+  plugins: "code",
+  toolbar: "code",
+  menubar: "tools"
+});
+    </script>
 
   </head>
 
   <body>
   <h1>TinyMCE</h1>
     <form method="post">
-      <textarea id="mytextarea">Hello, World!</textarea>
+      <textarea id="textarea"></textarea>
     </form>
   </body>
 </html>
