--- a/tinymce.html
+++ b/tinymce.html
@@ -9,9 +9,8 @@
     <script>
 tinymce.init({
   selector: "textarea",  // change this value according to your HTML
-  plugins: "code",
-  toolbar: "code",
-  menubar: "tools"
+plugins: 'code print preview importcss searchreplace autolink autosave save directionality visualblocks visualchars fullpage fullscreen image link media template codesample table charmap hr pagebreak nonbreaking anchor toc insertdatetime advlist lists wordcount imagetools textpattern noneditable help charmap quickbars emoticons',
+height : "1080"
 });
     </script>
 
