--- a/tinymcemarkdown.html
+++ b/tinymcemarkdown.html
@@ -5,7 +5,7 @@
   <script src="tinymce.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <link href="../shared.css" rel="stylesheet">
+  <link href="shared.css" rel="stylesheet">
 
   <link rel="icon" href="../favicon-16x16.png" sizes="16x16">
   <link rel="icon" href="../favicon-32x32.png" sizes="32x32">
