--- a/tinymce.html
+++ b/tinymce.html
@@ -21,5 +21,6 @@ height : "1080"
     <form method="post">
       <textarea id="textarea"></textarea>
     </form>
+    <p>Markdown editor: <a href="https://www.tiny.cloud/labs/markdown/">https://www.tiny.cloud/labs/markdown/</a>
   </body>
 </html>
