added link to markdown editor

--- a/tinymce.html
+++ b/tinymce.html
@@ -17,10 +17,9 @@ height : "1080"
   </head>
 
   <body>
-  <h1>TinyMCE</h1>
+  <h1>TinyMCE</h1> or try the markdown editor: <a href="https://www.tiny.cloud/labs/markdown/">https://www.tiny.cloud/labs/markdown/</a>
     <form method="post">
       <textarea id="textarea"></textarea>
     </form>
-    <p>Markdown editor: <a href="https://www.tiny.cloud/labs/markdown/">https://www.tiny.cloud/labs/markdown/</a>
   </body>
 </html>
